# promo-tg-mini-app

./: .gitignore  README.md  compose.yaml  index.html
promo-api/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  compose.yaml
promo-api/migrations/2025-04-06-131947_create_requests/: down.sql  up.sql
promo-api/src/: main.rs  models.rs  schema.rs
promo-app/: Dockerfile  README.md  angular.json  package-lock.json  package.json
promo-app/src/: index.html
promo-app/src/app/: app.html  app.spec.ts  app.ts
promo-requests/: go.mod  go.sum
promo-requests/api/: api.go
