[package]
name = "promo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.0", features = ["postgres"] }
#pq-sys = { version = "0.6", features = ["bundled"] }
#openssl-sys = { version = "0.9.100", features = ["vendored"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
